Bug 36656 - [Arrandale LVDS] U160 LVDS fails
Summary: [Arrandale LVDS] U160 LVDS fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 34437
  Show dependency treegraph
 
Reported: 2011-04-28 06:25 UTC by Rasmus Thytrup Karstensen
Modified: 2017-07-24 23:05 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
config files for kernel 2.6.38.3 and 2.6.39-rc4 (34.32 KB, application/gzip)
2011-04-28 06:25 UTC, Rasmus Thytrup Karstensen
no flags Details

Description Rasmus Thytrup Karstensen 2011-04-28 06:25:05 UTC
Created attachment 46138 [details]
config files for kernel 2.6.38.3 and 2.6.39-rc4

uname -a: 
Linux loki 2.6.38-gentoo-r3 #1 SMP Thu Apr 28 10:01:00 CEST 2011 x86_64 Intel(R) Core(TM) i5 CPU U 470 @ 1.33GHz GenuineIntel GNU/Linux

This bug is for the i915 driver in linux kernel, it exists with and without xorg running. I hope this is the right place for this bug, if not please point me in the right direction.

Before kernel 2.6.38 I had no output to LVDS on my new laptop (lenovo ideapad u160), however HDMI worked fine.

With 2.6.38 I got output to LVDS (tested with kernel 2.6.38.3 both with and without gentoo patchset), but experienced the following problem: after lid close/open action or suspend/resume action, LVDS stays blank and a reboot is needed. The system does not hang, it reboots correctly on ctrl+alt+del or is shutdown by acpid on power-button events.

Trying 2.6.39-rc4 from git, I do not get output to LVDS again.

attaching kernel configs!

happy to provide more info if needed
Comment 1 Chris Wilson 2011-04-28 13:27:06 UTC
The infamous U160.

This will fix it, but I cannot explain why:

diff --git a/drivers/gpu/drm/i915/intel_bios.c b/drivers/gpu/drm/i915/intel_bios
index fb5b4d4..53ff16f 100644
--- a/drivers/gpu/drm/i915/intel_bios.c
+++ b/drivers/gpu/drm/i915/intel_bios.c
@@ -267,7 +267,7 @@ static int intel_bios_ssc_frequency(struct drm_device *dev,
        case 4:
                return alternate ? 100 : 96;
        default:
-               return alternate ? 100 : 120;
+               return alternate ? 120 : 100;
        }
 }
Comment 2 Rasmus Thytrup Karstensen 2011-05-03 23:15:22 UTC
This fix works for 2.6.39, solved my issues with lid close and suspension
 - THX
Comment 3 Michel Alexandre Salim 2011-07-27 00:11:09 UTC
Keith Packard recently added a 'disable SSC' quirk to the i915 driver, with the U160 currently configured to have SSC automatically disabled:

  http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=435793dfb8aec7b2e19f72d5bce8a22fd0b57839

It's now in Linus' tree, so this bug could be closed once the next Linux release is out?
Comment 4 Michel Alexandre Salim 2011-07-27 01:00:12 UTC
This patch is part of Linux 3.0
Comment 5 Florian Mickler 2011-08-08 01:53:23 UTC
A patch referencing a commit referencing this bug report has been merged in Linux v3.1-rc1:

commit 070d329ae52e2fde341771d753a5b728145881f4
Author: Michel Alexandre Salim <salimma@fedoraproject.org>
Date:   Thu Jul 28 18:52:06 2011 +0200

    drm/i915: Add quirk to disable SSC on Sony Vaio Y2


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.